feat: move classes to separate modules

--- a/package.json
+++ b/package.json
@@ -1,16 +1,24 @@
 {
-  "name": "software-designs",
+  "name": "01_oop_and_ood",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "start": "nodemon ./dist/index.js",
-    "tsc": "tsc"
+  "directories": {
+    "test": "test"
   },
-  "keywords": [],
+  "scripts": {
+    "test:point": "jest test/Point.spec.ts",
+    "test:shape": "jest test/Shape.spec.ts",
+    "test:triangle": "jest test/Triangle.spec.ts",
+    "test": "jest"
+  },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.18"
+    "@types/jest": "^26.0.14",
+    "jest": "^26.4.2",
+    "ts-jest": "^26.4.0",
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.7"
   }
 }
